[project]
name = "netbox-plugin-dhcp"
version = "0.1.8"
description = "NetBox DHCP is a NetBox plugin for DHCP data."
authors = [
    {name="Peter Eckel", email="pe@sys4.de"},
]
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "dhcp"]
classifiers = [
    "Development Status :: 4 - Beta"
]
dependencies = []
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/sys4/netbox-plugin-dhcp"
# Documentation = "https://github.com/sys4/netbox-plugin-dns/blob/main/docs/using_netbox_dhcp.md"
Repository = "https://github.com/sys4/netbox-plugin-dhcp"
Issues = "https://github.com/sys4/netbox-plugin-dhcp/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = [
    "netbox_dhcp",
]
package-data = { "netbox_dhcp" = ["**/*", "templates/**"] }
exclude-package-data = { "netbox_dhcp" = ["tests/*"] }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "C", "RET", "UP", "I"]
ignore = ["F403", "C901"]
preview = true

[tool.ruff.lint.isort]
known-first-party = [
    "account",
    "circuits",
    "core",
    "dcim",
    "extras",
    "ipam",
    "netbox",
    "tenancy",
    "users",
    "utilities",
    "virtualization",
    "vpn",
    "wireless",
    "netbox_dhcp",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
